Added modal portfolio

--- a/index.html
+++ b/index.html
@@ -7,7 +7,9 @@
     <title>Tomás Gonzalez</title>
   </head>
   <body>
+    <div id="modals"></div>
     <div id="app"></div>
+    
     <script type="module" src="/src/main.js"></script>
   </body>
 </html>
